--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -4,60 +4,80 @@
   <title>Registration Form</title>
   <style>
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
+}
 
-    form {
-      background-color: #fff;
-      border-radius: 8px;
-      width: 100%;
-      max-width: 400px;
-    }
+form {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  max-width: 800px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-    h2 {
-      text-align: center;
-      color: #333;
-    }
+h2 {
+  width: 100%;
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
 
-    label {
-      font-weight: bold;
-      color: #555;
-      margin-bottom: 5px;
-    }
+.form-group {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 48%;
+  margin: 10px;
+}
 
-    input[type="text"],
-    input[type="password"],
-    input[type="email"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-sizing: border-box;
-      transition: border-color 0.3s;
-      font-size: 16px;
-    }
+label {
+  font-weight: bold;
+  color: #555;
+  margin-bottom: 5px;
+}
 
-    .error {
-      color: #e63946;
-      font-size: 0.9em;
-      margin-top: -5px;
-      margin-bottom: 10px;
-    }
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
 
-    button.submit-btn {
-      background-color: #4a90e2;
-      color: #fff;
-      border: none;
-      padding: 12px;
-      border-radius: 4px;
-      width: 100%;
-    }
+textarea {
+  resize: none;
+}
+
+.error {
+  color: #e63946;
+  font-size: 0.9em;
+  margin-top: 5px;
+}
+
+button.submit-btn {
+  width: 100%;
+  background-color: #4a90e2;
+  color: #fff;
+  border: none;
+  padding: 12px;
+  border-radius: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+button.submit-btn:hover {
+  background-color: #357ab8;
+}
+
   </style>
 </head>
 <body>
