--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -4,126 +4,157 @@
   <title>Registration Form</title>
   <style>
     body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  background-color: #f0f0f0;
-}
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+      font-family: Arial, sans-serif;
+    }
 
-form {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 20px;
-  max-width: 800px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+    form {
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border-radius: 8px;
+      padding: 30px;
+      max-width: 700px;
+      width: 100%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-h2 {
-  width: 100%;
-  text-align: center;
-  color: #333;
-  margin-bottom: 20px;
-}
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 20px;
+    }
 
-.form-group {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 48%;
-  margin: 10px;
-}
+    .form-row {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      margin-bottom: 15px;
+    }
 
-label {
-  font-weight: bold;
-  color: #555;
-  margin-bottom: 5px;
-}
+    .form-group {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select,
-textarea {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
-}
+    .form-group label {
+      font-weight: bold;
+      color: #555;
+      margin-bottom: 5px;
+    }
 
-textarea {
-  resize: none;
-}
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 16px;
+      width: 100%;
+    }
 
-.error {
-  color: #e63946;
-  font-size: 0.9em;
-  margin-top: 5px;
-}
+    .form-group textarea {
+      resize: none;
+    }
 
-button.submit-btn {
-  width: 100%;
-  background-color: #4a90e2;
-  color: #fff;
-  border: none;
-  padding: 12px;
-  border-radius: 4px;
-  margin-top: 20px;
-  cursor: pointer;
-}
+    .error {
+      color: #e63946;
+      font-size: 0.9em;
+      margin-top: 5px;
+    }
 
-button.submit-btn:hover {
-  background-color: #357ab8;
-}
+    button.submit-btn {
+      background-color: #4a90e2;
+      color: #fff;
+      border: none;
+      padding: 12px;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
 
+    button.submit-btn:hover {
+      background-color: #357ab8;
+    }
   </style>
 </head>
 <body>
   <form id="registrationForm" onsubmit="return validateForm()">
     <h2><u>Registration Form</u></h2>
-    
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="fname">
-    <div id="fnameError" class="error"></div>
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lname">
-    <div id="lnameError" class="error"></div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="fname">
+        <div id="fnameError" class="error"></div>
+      </div>
 
-    <label for="username">Username</label>
-    <input type="text" id="username" name="username">
-    <div id="usernameError" class="error"></div>
+      <div class="form-group">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lname">
+        <div id="lnameError" class="error"></div>
+      </div>
+    </div>
 
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password">
-    <div id="passwordError" class="error"></div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username">
+        <div id="usernameError" class="error"></div>
+      </div>
 
-    <label for="confirmPassword">Confirm Password</label>
-    <input type="password" id="confirmPassword" name="confirmPassword">
-    <div id="confirmPasswordError" class="error"></div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+        <div id="passwordError" class="error"></div>
+      </div>
+    </div>
 
-    <label for="gender">Gender</label>
-    <select id="gender" name="gender">
-      <option value="">Select Gender</option>
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-      <option value="other">Other</option>
-    </select>
-    <div id="genderError" class="error"></div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="confirmPassword">Confirm Password</label>
+        <input type="password" id="confirmPassword" name="confirmPassword">
+        <div id="confirmPasswordError" class="error"></div>
+      </div>
 
-    <label for="mobile">Mobile</label>
-    <input type="text" id="mobile" name="mobile">
-    <div id="mobileError" class="error"></div>
+      <div class="form-group">
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender">
+          <option value="">Select Gender</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select>
+        <div id="genderError" class="error"></div>
+      </div>
+    </div>
 
-    <label for="address">Address</label>
-    <textarea id="address" name="address"></textarea>
-    <div id="addressError" class="error"></div>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="mobile">Mobile</label>
+        <input type="text" id="mobile" name="mobile">
+        <div id="mobileError" class="error"></div>
+      </div>
 
-    <label for="email">Email ID</label>
-    <input type="email" id="email" name="email">
-    <div id="emailError" class="error"></div>
+      <div class="form-group">
+        <label for="email">Email ID</label>
+        <input type="email" id="email" name="email">
+        <div id="emailError" class="error"></div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="address">Address</label>
+      <textarea id="address" name="address"></textarea>
+      <div id="addressError" class="error"></div>
+    </div>
 
     <button type="submit" class="submit-btn">Register</button>
   </form>
@@ -131,7 +162,6 @@ button.submit-btn:hover {
   <script>
     function validateForm() {
       let isValid = true;
-
       document.querySelectorAll('.error').forEach(error => error.textContent = '');
 
       const fname = document.getElementById('fname').value.trim();
@@ -177,22 +207,11 @@ button.submit-btn:hover {
         isValid = false;
       }
 
-      const address = document.getElementById('address').value.trim();
-      if (address === '') {
-        document.getElementById('addressError').textContent = 'Address is required';
-        isValid = false;
-      }
-
       const email = document.getElementById('email').value.trim();
       const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
       if (!emailPattern.test(email)) {
         document.getElementById('emailError').textContent = 'Invalid email format';
         isValid = false;
-      }
-
-      if (isValid) {
-        alert("Successfully registered");
-        return false;
       }
 
       return isValid;
