--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -34,7 +34,7 @@
       display: flex;
       justify-content: space-between;
       gap: 20px;
-      margin-bottom: 15px;
+      margin-bottom: 25px; /* Increased space between fields */
     }
 
     .form-group {
@@ -57,6 +57,7 @@
       border-radius: 4px;
       font-size: 16px;
       width: 100%;
+      margin-bottom: 10px; /* Space between label and input */
     }
 
     .form-group textarea {
@@ -212,6 +213,10 @@
       if (!emailPattern.test(email)) {
         document.getElementById('emailError').textContent = 'Invalid email format';
         isValid = false;
+      }
+
+      if (isValid) {
+        alert('Registration successful!');
       }
 
       return isValid;
