--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -12,7 +12,6 @@
       background-color: #f0f0f0;
       font-family: Arial, sans-serif;
     }
-
     form {
       display: flex;
       flex-direction: column;
@@ -21,34 +20,28 @@
       padding: 30px;
       max-width: 700px;
       width: 100%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-
     h2 {
       text-align: center;
       color: #333;
       margin-bottom: 20px;
     }
-
     .form-row {
       display: flex;
       justify-content: space-between;
       gap: 20px;
-      margin-bottom: 25px; /* Increased space between fields */
+      margin-bottom: 25px;
     }
-
     .form-group {
       flex: 1;
       display: flex;
       flex-direction: column;
     }
-
     .form-group label {
       font-weight: bold;
       color: #555;
       margin-bottom: 5px;
     }
-
     .form-group input,
     .form-group select,
     .form-group textarea {
@@ -57,19 +50,16 @@
       border-radius: 4px;
       font-size: 16px;
       width: 100%;
-      margin-bottom: 10px; /* Space between label and input */
+      margin-bottom: 10px; 
     }
-
     .form-group textarea {
       resize: none;
     }
-
     .error {
       color: #e63946;
       font-size: 0.9em;
       margin-top: 5px;
     }
-
     button.submit-btn {
       background-color: #4a90e2;
       color: #fff;
@@ -80,7 +70,6 @@
       cursor: pointer;
       margin-top: 20px;
     }
-
     button.submit-btn:hover {
       background-color: #357ab8;
     }
@@ -95,7 +84,7 @@
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname">
         <div id="fnameError" class="error"></div>
-      </div>
+      </div><br>
 
       <div class="form-group">
         <label for="lname">Last Name</label>
@@ -109,7 +98,7 @@
         <label for="username">Username</label>
         <input type="text" id="username" name="username">
         <div id="usernameError" class="error"></div>
-      </div>
+      </div><br>
 
       <div class="form-group">
         <label for="password">Password</label>
@@ -123,7 +112,7 @@
         <label for="confirmPassword">Confirm Password</label>
         <input type="password" id="confirmPassword" name="confirmPassword">
         <div id="confirmPasswordError" class="error"></div>
-      </div>
+      </div><br>
 
       <div class="form-group">
         <label for="gender">Gender</label>
@@ -142,7 +131,7 @@
         <label for="mobile">Mobile</label>
         <input type="text" id="mobile" name="mobile">
         <div id="mobileError" class="error"></div>
-      </div>
+      </div><br>
 
       <div class="form-group">
         <label for="email">Email ID</label>
