--- a/js_predefined_functions.html
+++ b/js_predefined_functions.html
@@ -39,7 +39,7 @@
 
     <div class="section">
         <h2>String Methods</h2>
-        <p>JavaScript provides several methods to manipulate strings. Below are some of the most commonly used string methods:</p>
+        <p>Below are examples of 5 commonly used string methods:</p>
 
         <div class="example">
             <h3>1. <code>toUpperCase()</code></h3>
@@ -64,22 +64,38 @@
             <code>let char = str.charAt(1);</code><br>
             <p class="output">Output: <span id="charAt"></span></p>
         </div>
+
+        <div class="example">
+            <h3>4. <code>includes()</code></h3>
+            <p>Checks if a string contains a specified substring.</p>
+            <code>let str = "hello world";</code><br>
+            <code>let hasWorld = str.includes("world");</code><br>
+            <p class="output">Output: <span id="includes"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>5. <code>replace()</code></h3>
+            <p>Replaces a specified value with another value in a string.</p>
+            <code>let str = "hello world";</code><br>
+            <code>let replacedStr = str.replace("world", "JavaScript");</code><br>
+            <p class="output">Output: <span id="replace"></span></p>
+        </div>
     </div>
 
     <div class="section">
         <h2>Math Methods</h2>
-        <p>JavaScript's <code>Math</code> object provides a variety of methods for mathematical operations. Here are some commonly used Math methods:</p>
+        <p>Below are examples of 5 commonly used math methods:</p>
 
         <div class="example">
             <h3>1. <code>Math.max()</code></h3>
-            <p>Returns the largest of the zero or more numbers provided as input.</p>
+            <p>Returns the largest number among the provided inputs.</p>
             <code>let max = Math.max(1, 3, 2, 8, 5);</code><br>
             <p class="output">Output: <span id="max"></span></p>
         </div>
 
         <div class="example">
             <h3>2. <code>Math.min()</code></h3>
-            <p>Returns the smallest of the zero or more numbers provided as input.</p>
+            <p>Returns the smallest number among the provided inputs.</p>
             <code>let min = Math.min(1, 3, 2, -8, 5);</code><br>
             <p class="output">Output: <span id="min"></span></p>
         </div>
@@ -90,6 +106,20 @@
             <code>let randomNum = Math.random();</code><br>
             <p class="output">Output: <span id="randomNum"></span></p>
         </div>
+
+        <div class="example">
+            <h3>4. <code>Math.round()</code></h3>
+            <p>Rounds a number to the nearest integer.</p>
+            <code>let rounded = Math.round(4.7);</code><br>
+            <p class="output">Output: <span id="round"></span></p>
+        </div>
+
+        <div class="example">
+            <h3>5. <code>Math.sqrt()</code></h3>
+            <p>Returns the square root of a number.</p>
+            <code>let sqrt = Math.sqrt(16);</code><br>
+            <p class="output">Output: <span id="sqrt"></span></p>
+        </div>
     </div>
 
     <script>
@@ -97,15 +127,19 @@
         let str1 = "hello";
         let str2 = "HELLO";
         let str3 = "hello world";
-        
+
         document.getElementById("upperStr").textContent = str1.toUpperCase();
         document.getElementById("lowerStr").textContent = str2.toLowerCase();
         document.getElementById("charAt").textContent = str1.charAt(1);
+        document.getElementById("includes").textContent = str3.includes("world");
+        document.getElementById("replace").textContent = str3.replace("world", "JavaScript");
 
         // Math Method Examples
         document.getElementById("max").textContent = Math.max(1, 3, 2, 8, 5);
         document.getElementById("min").textContent = Math.min(1, 3, 2, -8, 5);
         document.getElementById("randomNum").textContent = Math.random().toFixed(2);
+        document.getElementById("round").textContent = Math.round(4.7);
+        document.getElementById("sqrt").textContent = Math.sqrt(16);
     </script>
 
 </body>
